--- a/public/style.css
+++ b/public/style.css
@@ -81,3 +81,36 @@ textarea {
     color: #333;
     font-size: 14px;
 }
+
+.btn{
+    display: inline-block;
+    
+    border: blue;
+    border-width: 10px;
+    margin-top: -90%;
+    margin-left: 92%;
+
+    
+    width: 100px;
+    padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.btn1{
+    background-color: transparent;
+  border: 3px solid #00d7c3;
+  border-radius: 50px;
+  -webkit-transition: all .15s ease-in-out;
+  transition: all .15s ease-in-out;
+  color: #00d7c3;
+}
+
+.btn1:hover{
+    box-shadow: 0 0 20px 0 #3203f0 inset, 0 0 20px 2px #3203f0;
+  border: 8px solid #3203f0;
+}
